fixed hero title
fixed hero title "HawkHack" going out of bounds when on mobile creating a white bar to the right of the site

--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -6702,4 +6702,18 @@ body > * {
 
 .btn-outline-light:hover{
   color:var(--secondary) !important;
+  
+}
+.tbn-outline-light{
+  margin-bottom: 10px !important;
+}
+
+.display-2{
+  font-size: 12vw !important;
+}
+
+@media screen and (max-width: 600px){
+  .display-2{
+    font-size:15vw;
+  }
 }
